Cou99 + UF + Strength
Add a new algorithm based on Cou99 + UF with
the use of an Union Find. This algorithm exploits
the strength of the SCCs of the property automaton

* iface/dve2fasttgba/dve2check.cc: insert new algo in tool
* src/fasttgbaalgos/ec/Makefile.am: add new files
* src/fasttgbaalgos/ec/cou99strength_uf.cc: new implem file
* src/fasttgbaalgos/ec/cou99strength_uf.hh: new header file

--- a/src/fasttgbaalgos/ec/Makefile.am
+++ b/src/fasttgbaalgos/ec/Makefile.am
@@ -27,6 +27,7 @@ ec_HEADERS = \
   cou99.hh \
   cou99_uf.hh \
   cou99strength.hh \
+  cou99strength_uf.hh \
   union_find.hh
 
 noinst_LTLIBRARIES = libec.la
@@ -34,4 +35,5 @@ libec_la_SOURCES = \
   cou99.cc \
   cou99_uf.cc \
   cou99strength.cc \
+  cou99strength_uf.cc \
   union_find.cc
